--- a/iberia.html
+++ b/iberia.html
@@ -18,7 +18,7 @@
         const latitude = position.coords.latitude;
         const longitude = position.coords.longitude;
 
-        // Utiliza una API de geolocalización para obtener la provincia
+        // Utiliza una API de geolocalización para obtener la provincia.
         const url = `https://nominatim.openstreetmap.org/reverse?format=jsonv2&lat=${latitude}&lon=${longitude}`;
 
         fetch(url)
