--- a/iberia.html
+++ b/iberia.html
@@ -77,7 +77,7 @@
 			} else if (provincia === "Neuquen") {
               window.location.href = "https://wa.me/1131370277";
 			} else {
-              window.location.href = "https://juani357.github.io/";
+              window.location.href = "https://infoiberia.github.io/";
             }
           })
           .catch(error => {
