--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             }
           })
           .catch(error => {
-            document.getElementById("provincia").innerHTML = "Hubo un error al obtener tu ubicación, probá actualizando la agina.";
+            document.getElementById("provincia").innerHTML = "Hubo un error al obtener tu ubicación, probá actualizando la pagina.";
           });
       }
     </script>
